# qolmat

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  conda.yml  environment.ci.yml  environment.dev.yml  environment.doc.yml  environment.yml  improve_rpca.py  improved_rpca.py  mypy.ini  nohup.txt  noisy_rpca.py  pyproject.toml  pytest.ini  random_stuff.py  requirements.dev.txt  rpca.py  setup.py  setup_backup.py  test.ipynb  utils.py
.github/workflows/: docs.yml  publish.yml  test.yml  test_env.yml  test_quick.yml
classes/: graph_rpca.py  improved_rpca.py  noisy_rpca.py  rpca.py
docs/: EM_sampler.rst  Hole_Generator.rst  Makefile  RPCA.rst  analysis.rst  api.rst  audit.rst  conf.py  explanation.rst  hole_generator.rst  imputer_diffusion_model.rst  imputers.rst  index.rst  intro.rst
docs/_build/doctrees/: EM_sampler.doctree  RPCA.doctree  api.doctree  environment.pickle  explanation.doctree  index.doctree  intro.doctree  readme.doctree
docs/_build/html/: .buildinfo  EM_sampler.html  RPCA.html  api.html  explanation.html  genindex.html  index.html  intro.html  objects.inv  readme.html  search.html  searchindex.js
docs/_templates/: class.rst
docs/examples/: RPCA_example.rst  denoise_images.rst  imputation_example.rst  imputer_keras.rst  index.rst  time_series.rst
examples/: 1_timeSeries.ipynb  1_timeSeries.md  2_image_denoising.ipynb  2_image_denoising.md  3_background.ipynb  3_background.md  Benchmark_DL.md  Benchmark_Forecast_TS.md  RPCA.md  ablation_study_architecture_TabDDPM.md  ablation_study_diffusion_models.md  ablation_study_diffusion_models_TabDDPMTS.md  ablation_study_diffusion_models_tab.md  ablation_study_diffusion_models_ts.md  ablation_study_explicability.md  benchmark.ipynb  benchmark.md  benchmark_diffusion_models.md  benchmark_diffusion_models_CI.md  benchmark_energy_distance.md  benchmark_impu_predicter.md  kl-divergence.md  line_H.ipynb  metrics_usage.md  projection_evaluation.md  rpca.ipynb  run_benchmark_plot.py  run_computational_time.py  run_imputer_predictor.py  run_imputer_predictor_new.py  test.py  test_EM.md
examples/data/imp_pred/: benchmark_Bike_Sharing_Demand.pkl  benchmark_Bike_Sharing_Demand_new.pkl  benchmark_Brazilian_houses.pkl  benchmark_Brazilian_houses_new.pkl  benchmark_MiamiHousing2016.pkl  benchmark_MiamiHousing2016_new.pkl  benchmark_all.csv  benchmark_all_new.csv  benchmark_diamonds.pkl  benchmark_diamonds_new.pkl  benchmark_elevators.pkl  benchmark_elevators_add_nan_indicator.pkl  benchmark_elevators_new.pkl  benchmark_houses.pkl  benchmark_houses_add_nan_indicator.pkl  benchmark_houses_new.pkl  benchmark_medical_charges.pkl  benchmark_medical_charges_new.pkl  benchmark_sulfur.pkl  benchmark_sulfur_new.pkl  benchmark_wine_quality.pkl  benchmark_wine_quality_new.pkl
examples/pklm/: PKLM_Simulations.py  PKLM_tuto.ipynb  PKLM_tutoriel.py  nb_proj_optimisation.ipynb  tuto_pklm.ipynb
examples/pklm/Datasets_creation_for_comparison/: Dataset_creation.ipynb
examples/pklm/Optimisation/: Paralelisation.ipynb
examples/pklm/p_value_validity/: p_value_validity.ipynb  reproduce_results.R
examples/tutorials/: README.rst  Untitled.ipynb  plot_tuto_benchmark_TS.py  plot_tuto_categorical.ipynb  plot_tuto_categorical.py  plot_tuto_diffusion_models.py  plot_tuto_hole_generator.py  plot_tuto_mcar.py  plot_tuto_mcar_test.py  plot_tuto_mean_median.py  tuto_benchmark_TS.py  tuto_diffusion_models.py  tuto_hole_generator.py  tuto_mean_median.py  tuto_tabular_hole_generator.py
qolmat/: .coverage  .flake8  __init__.py
qolmat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qolmat/analysis/: PKLMtest.R  demo_pklm_2.py  demo_pklm_2_optimized.py  helpers.R  holes_characterization.py  pklm.py  pklm_numpy.py  pklm_pandas.py
qolmat/audit/: holes_characterization.py
qolmat/benchmark/: benchmark.ipynb  comparator.py  comparator_forcastCV_ts.py  comparator_forcast_ts.py  cross_validation.py  hyperparameters.py  imputer_predictor.py  metrics.py  missing_patterns.py  missing_patterns.py.948956f95daa8a61149a5897aaee0e8a.tmp  utils.py
qolmat/data/: titanic.csv
qolmat/imputations/: em_sampler.py  em_sampler_suez.py  estimators.py  imputers.py  imputers_keras.py  imputers_pypots.py  imputers_pytorch.py  models.py  params_imputer_dl.py  preprocessing.py  softimpute.py
qolmat/imputations/MIMCA/: mimca.py
qolmat/mimca/: implementation.ipynb
qolmat/notebooks/: air-quality.ipynb  benchmark.ipynb  benchmark.md  benchmark.py
qolmat/tests/: test_benchmark_utils.py  test_comparator.py  test_em_sampler.py  test_models.py  test_rpca.py  test_rpca_utils.py  test_utils.py
qolmat/utils/: __init__.py  algebra.py  data.py  drawing.py  exceptions.py  input_check.py  missing_patterns.py  plot.py  utils.py  utils_np.py
robust_pca/: __init__.py
robust_pca/benchmark/: benchmark.ipynb  comparator.py  cross_validation.py  utils.py
robust_pca/classes/: __init__.py  aggregate_desagregate.py  evaluate_imputer.py  graph_rpca.py  improved_rpca.py  imputation_RPCA.py  imputation_RPCA_entropy.py  impute_H_st_Denis_week.py  noisy_rpca.py  optimize_imputor.py  pcp_rpca.py  rpca.py  temporal_rpca.py
robust_pca/imputations/: models.py
robust_pca/tests/: test_utils.py
robust_pca/utils/: __init__.py  drawing.py  utils.py  utils_images.py
tests/: conftest.py
tests/analysis/: test_holes_characterization.py
tests/audit/: test_holes_characterization.py
tests/benchmark/: test_comparator.py  test_cross_validation.py  test_hyperparameters.py  test_metrics.py  test_missing_patterns.py  test_utils.py
tests/imputations/: test_em_sampler.py  test_estimators.py  test_imputers.py  test_imputers_diffusions.py  test_imputers_keras.py  test_imputers_pytorch.py  test_imputers_skl.py  test_preprocessing.py  test_softimpute.py
tests/utils/: test_algebra.py  test_data.py  test_exceptions.py  test_input_check.py  test_plot.py  test_utils.py
utils/: drawing.py  utils.py  utils_images.py
(+118 files in other folders)
